--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "cleanUrls": true
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "rewrites": [
+    {
+      "source": "/about",
+      "destination": "/about/index.html"
+    }
+  ]
 }
