--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,18 @@
 {
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "rewrites": [
+  "builds": [
     {
-      "source": "/about",
-      "destination": "/about/index.html"
+      "src": "**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/about",
+      "dest": "/about/index.html"
+    },
+    {
+      "src": "/about/",
+      "dest": "/about/index.html"
     }
   ]
 }
