--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,14 @@
     {
       "src": "/about/",
       "dest": "/about/index.html"
+    },
+    {
+      "src": "/daily",
+      "dest": "/daily/index.html"
+    },
+    {
+      "src": "/daily/",
+      "dest": "/daily/index.html"
     }
   ]
 }
