--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "three": "^0.179.1"
   },
   "devDependencies": {
-    "vite": "^7.1.2"
+    "vite": "^7.1.3"
   }
 }
