--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.56.0",
     "three": "^0.179.1"
   },
   "devDependencies": {
