--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
     { "source": "/about", "destination": "/about.html" },
-    { "source": "/daily", "destination": "/daily.html" }
+    { "source": "/daily", "destination": "/daily.html" },
+    { "source": "/gamedev", "destination": "/gamedev.html" }
   ]
 }
