--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
     { "source": "/", "destination": "/index.html" },
     { "source": "/about", "destination": "/about.html" },
     { "source": "/daily", "destination": "/daily.html" },
+    { "source": "/privacy-policy", "destination": "/privacy-policy.html" },
     { "source": "/gamedev", "destination": "/gamedev.html" }
   ]
 }
